# algo-warriors-server

./: .gitignore  Makefile  README.md  app.py  cs348proj_for_cs348_user-2024_06_21_00_39_32-dump.sql  dbseed.sh  docker-compose.yaml  dockerfile  environment.yaml  environment.yml  init_setup.sh  pyproject.toml  requirements.txt  template.env  template.py  vercel.json
setup/: generate_db.py  init_setup.sh
setup/create_table/: create_index.sql  create_table.sql
setup/populate_table/: dataset.ipynb  discussions.json  gen_prod_discussdata.py  populate_discussions.py  populate_popups.py  populate_table.py  populate_tag_table.py  populate_user.py  problems.json  test_cases.json  users.json
sql_test_sample/contest/: 2.out  4.out
sql_test_sample/problem_tags/: 1.sql
sql_tests/contest/: 1.sql  2.sql  3.out  3.sql  4.sql  5.out  5.sql  6.sql
sql_tests/discussions/: 1.sql  2.out  2.sql  3.out  3.sql  4.out  4.sql  6.sql
sql_tests/popups/: 1.out  2.out  2.sql  3.out  3.sql
sql_tests/problem_tags/: 1.out  2.out  2.sql  3.out  3.sql  4.out  4.sql  5.out  5.sql  recommend_problems.sql
sql_tests/problems/: get_problem.sql  problem_list.sql
sql_tests_prod/contests/: 1.out  1.sql  2.out  2.sql  3.out  3.sql  4.out  4.sql  5.out  5.sql  6.out  6.sql  7.out
sql_tests_prod/discussions/: 1.out  1.sql  2.out  2.sql  3.out  3.sql  4.out  4.sql  5.sql
sql_tests_prod/popups/: 1.out  1.sql  2.out  2.sql  3.out  3.sql  4.out
sql_tests_prod/problem_tags/: 1.out  1.sql  2.out  2.sql  3.sql
sql_tests_prod/problems/: get_problem.out  problem_list.out
src/: __init__.py
(+59 files in other folders)
