[tool.poetry]
name = "algo-warriors-server"
version = "0.1.0"
description = ""
authors = ["Jaehak Kim", "Shreyas Peddi", "Vidhi Ruparel", "Amna Khushbakht"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
apispec = "6.6.1"
bcrypt = "4.1.3"
blinker = "1.8.2"
certifi = "2024.7.4"
click = "8.1.7"
distlib = "0.3.8"
filelock = "3.15.4"
flask = "3.0.3"
flask-jwt-extended = "4.6.0"
flask-smorest = "0.44.0"
flask-sqlalchemy = "3.1.1"
greenlet = "3.0.3"
itsdangerous = "2.2.0"
jinja2 = "3.1.4"
markupsafe = "2.1.5"
marshmallow = "3.21.3"
packaging = "24.1"
pipenv = "2024.0.1"
platformdirs = "4.2.2"
psycopg2-binary = "2.9.9"
pyjwt = "2.8.0"
python-dotenv = "1.0.1"
redis = "5.0.7"
setuptools = "70.3.0"
sqlalchemy = "2.0.31"
typing-extensions = "4.12.2"
virtualenv = "20.26.3"
webargs = "8.4.0"
werkzeug = "3.0.3"
flask-redis = "^0.4.0"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
